--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-ellipse-progress": "^1.3.0",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
